Fix for tests after javalin migration